--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #000; /* 원하는 색으로 변경 가능 */
+            background: #ffffff; /* 배경: 흰색 */
         }
 
         button {
@@ -21,6 +21,7 @@
             border: none;
             border-radius: 12px;
             cursor: pointer;
+            background-color: #d9d9d9; /* 버튼: 회색 */
         }
     </style>
 </head>
