--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+v<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
@@ -22,44 +22,43 @@
             border-radius: 12px;
             cursor: pointer;
             background-color: #d9d9d9;
-            transition: transform 0.15s ease;
+            transition: transform 0.1s ease;
         }
     </style>
 </head>
 <body>
 
-    <!-- 버튼 -->
     <button id="clickBtn">Click</button>
 
-    <!-- 사운드 파일들 -->
-    <audio id="hoverSound" src="Sound Effect/hover.mp4"></audio>
-    <audio id="clickSound" src="Sound Effect/click.mp4"></audio>
+    <!-- preload 추가 -->
+    <audio id="hoverSound" src="Sound Effect/hover.mp4" preload="auto"></audio>
+    <audio id="clickSound" src="Sound Effect/click.mp4" preload="auto"></audio>
 
     <script>
         const btn = document.getElementById("clickBtn");
         const hoverSound = document.getElementById("hoverSound");
         const clickSound = document.getElementById("clickSound");
 
-        // Hover 시 → 커짐 + hover 소리
-        btn.addEventListener("mouseenter", () => {
+        // hover 즉각 반응하기 (mouseover)
+        btn.addEventListener("mouseover", () => {
             btn.style.transform = "scale(1.15)";
             hoverSound.currentTime = 0;
             hoverSound.play();
         });
 
-        // Hover 벗어나면 → 원래 크기
+        // hover 벗어나면 원래 크기
         btn.addEventListener("mouseleave", () => {
             btn.style.transform = "scale(1)";
         });
 
-        // 클릭 시 → 작아짐 + click 소리
+        // 클릭 시 작아짐 + click 소리
         btn.addEventListener("mousedown", () => {
             btn.style.transform = "scale(0.9)";
             clickSound.currentTime = 0;
             clickSound.play();
         });
 
-        // 클릭 떼면 → hover 크기 유지
+        // 마우스 떼면 hover 크기로 복귀
         btn.addEventListener("mouseup", () => {
             btn.style.transform = "scale(1.15)";
         });
